--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,9 +16,7 @@
             <div class="chat-container">
                 <div class="chat-messages" id="chat-messages">
                     <!-- Aquí se mostrarán los mensajes -->
-                    <div class="typing-indicator" id="typing-indicator">
-                        Escribiendo...
-                    </div>
+                    <div id="typing-indicator" class="typing-indicator">Escribiendo...</div>
                 </div>
 
                 <div class="chat-input" id="chat-input">
